# terraland

./: .bandit  .codeclimate.yml  .coderabbit.yaml  .coverage  .pylintrc  .ruff.toml  404.html  LICENSE  PYPI_README.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: bandit.yml  pylint.yml  pyright.yml  ruff.yml  run_tests.yml
CHANGELOG/: index.html
docs/: CHANGELOG.md  roadmap.md
docs/guides/: project_navigation.md  switch_workspace.md
docs/overrides/: home.html
guides/project_navigation/: index.html
guides/switch_workspace/: index.html
requirements/: README.md  requirements-base.in  requirements-base.txt  requirements-dev.in  requirements-dev.txt  requirements-docs.in  requirements-docs.txt
roadmap/: index.html
search/: search_index.json
src/terraland/: logo.py  settings.py
src/terraland/domain/file_system/: services.py
src/terraland/domain/operation_system/: entities.py  services.py
src/terraland/domain/terraform/core/: entities.py  exceptions.py  services.py
src/terraland/domain/terraform/workspaces/: entities.py  exceptions.py  services.py
src/terraland/infrastructure/file_system/: exceptions.py  services.py  utils.py
src/terraland/infrastructure/operation_system/: exceptions.py  services.py
src/terraland/infrastructure/shared/: command_process_context_manager.py  command_utils.py  exceptions.py
src/terraland/infrastructure/terraform/core/: commands_builders.py  exceptions.py  services.py
src/terraland/infrastructure/terraform/workspace/: exceptions.py  services.py
src/terraland/presentation/cli/: app.py  cache.py  commands.yaml  commands_descriptions.py  di_container.py  utils.py
src/terraland/presentation/cli/action_handlers/: about.py  apply.py  base.py  format.py  init.py  main.py  plan.py  validate.py
src/terraland/presentation/cli/entities/: terraform_command_executor.py
src/terraland/presentation/cli/messages/: tf_apply_action_request.py  tf_format_action_request.py  tf_init_action_request.py  tf_plan_action_request.py  tf_validate_action_request.py
src/terraland/presentation/cli/themes/: arctic.py  github_dark.py
src/terraland/presentation/cli/widgets/: file_system_navigator.py  resizable_rule.py
src/terry/: logo.py  settings.py
src/terry/domain/file_system/: entities.py  exceptions.py  services.py
src/terry/domain/operation_system/: exceptions.py  services.py
src/terry/infrastructure/file_system/: exceptions.py  services.py
src/terry/infrastructure/operation_system/: exceptions.py  services.py
src/terry/infrastructure/shared/: command_process_context_manager.py  command_utils.py
src/terry/presentation/cli/: app.py  cache.py  commands_descriptions.py  di_container.py  test_resize_to_be_deleted.py
tests/integration/: conftest.py  utils.py
tests/integration/screens/about/: test_about.py
tests/integration/screens/file_system_navigation/: test_file_system_navigation.py
tests/integration/screens/main/: test_commands_log.py  test_content.py  test_main.py  test_project_tree.py  test_state_files.py  test_workspaces.py
tests/integration/screens/search/: test_search.py
tests/integration/screens/tf_apply/: test_apply.py
tests/integration/screens/tf_command_output/: test_tf_command_output.py
tests/integration/screens/tf_format/: test_format.py
tests/integration/screens/tf_init/: test_init.py
tests/integration/screens/tf_plan/: test_plan.py
tests/integration/screens/tf_validate/: test_validate.py
tests/integration/widgets/: test_file_system_navigator.py
tests/unit/: conftest.py
tests/unit/fixtures/: file_system.py  operation_system.py  terraform_core.py  terraform_workspace.py
tests/unit/infrastructure/: test_command_builders.py  test_command_context_manager.py  test_command_utils.py  test_file_system.py  test_operation_system.py  test_terraform_core.py  test_terraform_workspace.py
tests/visual/screens/: conftest.py  test_main.py
(+109 files in other folders)
