[project]
name = "terraland"
version = "0.1.3"
requires-python = ">= 3.12"
description = "Terminal IDE for Terraform"
dynamic = ["dependencies"]
authors = [
  {name = "Bohdana Kuzmenko", email = "bohdana.kuzmenko.dev@gmail.com"},
]
readme = {file = "PYPI_README.md", content-type = "text/markdown"}

[project.scripts]
terraland = "terraland.presentation.cli.app:main"


[tool.setuptools.dynamic]
dependencies = { file = ["./requirements/requirements-base.txt"] }

[tool.coverage.run]
branch = true
source = [
    "src/terraland",
]
command_line = "-m pytest tests/ -v"

[project.urls]
Homepage = "https://github.com/the-impact-craft/terraland"
Issues = "https://github.com/the-impact-craft/terraland/issues"

[tool.coverage.report]
fail_under = 70

# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",
    "pragma: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]


[tool.black]
line-length = 127

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src"]
sources = ["src"]

[tool.hatch.version]
path = "src/sourcerer/__init__.py"
